--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,8 @@
     RewriteEngine On
     RewriteBase /
 
-    RewriteCond %{HTTP_HOST} !^cafeincampus.org$ [NC]
-    RewriteRule ^(.*)$ http://cafeincampus.org/$1 [R=301,L]
+    RewriteCond %{HTTP_HOST} !^democratus.com$ [NC]
+    RewriteRule ^(.*)$ http://democratus.com/$1 [R=301,L]
 
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
